# UCGA

./: README.md  compute_phase3_table.py  demo_llm_agent.py  demo_math.py  demo_multi_agent.py  demo_second_brain.py  experiment_babi.py  experiment_parity.py  experiment_regression.py  experiment_sorting.py  experiment_transformer_vs_mlp.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
agents/: __init__.py  cognitive_agent.py  grid_world_env.py  reward_signal.py  rl_agent.py  tool_registry.py
experiments/: __init__.py  ablation_models.py  baselines.py  experiment_memory.py  experiment_phase6a_attention_suppression.py  experiment_phase6b_retrieval_history.py  experiment_phase6c_gru_accumulator.py  experiment_reasoning.py  gib_validation.py  los_validation.py  ros_validation.py  run_ablations.py  run_baselines.py  run_encoder_comparison.py  run_reasoning.py  run_scaling.py  synthetic_benchmarks.py
paper/: appendix.tex  main.tex  references.bib  v2_additions.tex
phase6a/: phase6a_raw_results.json  phase6a_report.md  phase6a_run_metrics.csv  phase6a_step_metrics.csv  phase6a_summary.csv
second_brain/: __init__.py  config.py  main.py
src/: App.jsx  index.css
tests/: __init__.py  test_agent.py  test_agi_scale.py  test_encoders.py  test_intelligence.py  test_memory.py  test_model.py  test_multimodal.py  test_nodes.py
training/: __init__.py  config.py  train_agnews.py  train_cifar10.py  train_language.py  train_multimodal.py  train_optimized.py  train_sst2.py  train_synthetic.py  train_visual.py
ucga/: __init__.py  (+4 more)
(+47 files in other folders)
