[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucga"
version = "0.1.0"
description = "Unified Cognitive Graph Architecture — a graph-based AGI framework"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Aman Singh"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
datasets = ["torchvision>=0.15.0", "datasets>=2.14.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["ucga[datasets,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["ucga*"]
